# NextVideo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  MakefileEM  assetMaker.sh  lib.sh  libemcc.sh
assets/: 2d.vs  fdm.glsl
fdmData/fdm/: preguntes.md
include/: video.hpp
src/backends/: gl.cpp
src/engine/: canvas.cpp  core.hpp  engine.cpp  engine.hpp  gl.cpp  gl.hpp  glfwSurface.cpp  scene.cpp  util.cpp  vk.cpp
src/tests/: fdm.cpp  test.cpp
srcTests/: fdm.cpp  test.cpp
